<package format="3">
  <name>hsrb_gazebo_launch</name>
  <version>2.0.0</version>
  <description>Gazebo launch files with services</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Hiroaki Yaguchi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hsrb_gazebo_bringup</exec_depend>
  <exec_depend>tmc_potential_maps</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>hsrb_rosnav_config</exec_depend>
  <exec_depend>hsrb_rviz_simulator</exec_depend>
  <exec_depend>hsrb_pseudo_endeffector_controller</exec_depend>
  <exec_depend>tmc_robot_rrt_planner_node</exec_depend>
  <exec_depend>hsrb_timeopt_ros</exec_depend>
  <exec_depend>hsrb_manipulation_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>