<package format="3">
  <name>hsrb_robot_launch</name>
  <version>2.0.0</version>
  <description>Launch files and scripts for HSRB</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>
  <author>Masayuki Masuda</author>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>hsrb_bringup</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tmc_voice_msgs</exec_depend>

  <test_depend>python3-mock</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>